--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 
 <body>
     <main id="main">
-    <header>
-        <div class="header-content">
-            <div class="title-block">
-                <span class="main-title" id="title">Tribute Page</span>
-                <span class="subtitle">a page to tribute someone</span>
+        <header>
+            <div class="header-content">
+                <div class="title-block">
+                    <span class="main-title" id="title">Tribute Page</span>
+                    <span class="subtitle">a page to tribute someone</span>
+                </div>
+                <div id="img-div" class="img-div">
+                    <img id="image" src="images/tribute-image.png" alt="tribute-image">
+                    <figcaption id="img-caption" class="img-caption">a image to show the tributed one</figcaption>
+                </div>
             </div>
-            <div id="img-div" class="img-div">
-                <img id="image" src="images/tribute-image.png" alt="tribute-image">
-                <figcaption class="img-caption">a image to show the tributed one</figcaption>
-            </div>
-        </div>
-    </header>
+        </header>
         <section>
             <div class="main-content">
                 <div class="tribute-info" id="tribute-info">
@@ -30,10 +30,11 @@
                     ullam ex quaerat saepe modi minus corporis, beatae aliquid unde animi recusandae totam officiis ea
                     voluptates.
                 </div>
-                <a href="#" target="_blank" id="tribute-link" >here</a>
+                <a href="#" target="_blank" id="tribute-link">here</a>
             </div>
         </section>
     </main>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 
 </html>
