--- a/index.html
+++ b/index.html
@@ -2,38 +2,38 @@
 <html lang="pt-BR">
 
 <head>
-    <title>tributte-site</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Eduardo Binatti">
+    <title>tributte-site</title>
+
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
-    <main id="main">
+    <div id="main">
         <header>
             <div class="header-content">
                 <div class="title-block">
-                    <span class="main-title" id="title">Tribute Page</span>
+                    <span id="title">Tribute Page</span>
                     <span class="subtitle">a page to tribute someone</span>
                 </div>
-                <div id="img-div" class="img-div">
+                <div id="img-div">
                     <img id="image" src="images/tribute-image.png" alt="tribute-image">
-                    <figcaption id="img-caption" class="img-caption">a image to show the tributed one</figcaption>
+                    <figcaption id="img-caption">a image to show the tributed one</figcaption>
                 </div>
             </div>
         </header>
-        <section>
+        <main>
             <div class="main-content">
-                <div class="tribute-info" id="tribute-info">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio natus et culpa delectus iusto,
-                    ullam ex quaerat saepe modi minus corporis, beatae aliquid unde animi recusandae totam officiis ea
-                    voluptates.
+                <div id="tribute-info">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora libero blanditiis reprehenderit quos eveniet quo laudantium veritatis quae magni quia error repellendus a nam, corporis et consequatur omnis impedit minus distinctio fuga tempore eum. Culpa dolor quod exercitationem facere facilis! Voluptatem sequi excepturi perferendis consectetur totam quas facilis deserunt saepe eum tempore pariatur velit esse veritatis rerum odio modi, unde quis doloremque tenetur. Dolor, tempora. Itaque optio alias nam nihil voluptatem. Odio consequuntur delectus laborum, quis error quas eos, distinctio odit optio, quae blanditiis dolorem cumque earum accusantium dicta repellendus vel fuga corrupti fugit excepturi tempora. Sit consequuntur beatae pariatur nisi? Nisi doloribus illo voluptate labore esse provident quidem dolorum, ab suscipit eligendi est necessitatibus possimus alias cumque unde iusto?
                 </div>
                 <a href="#" target="_blank" id="tribute-link">here</a>
             </div>
-        </section>
-    </main>
+        </main>
+    </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 
