--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="header-content">
                 <div class="title-block">
                     <span id="title">Tribute Page</span>
-                    <span class="subtitle">a page to tribute someone</span>
+                    <p class="subtitle">a page to tribute someone</p>
                 </div>
                 <div id="img-div">
                     <img id="image" src="images/tribute-image.png" alt="tribute-image">
@@ -28,9 +28,22 @@
         <main>
             <div class="main-content">
                 <div id="tribute-info">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora libero blanditiis reprehenderit quos eveniet quo laudantium veritatis quae magni quia error repellendus a nam, corporis et consequatur omnis impedit minus distinctio fuga tempore eum. Culpa dolor quod exercitationem facere facilis! Voluptatem sequi excepturi perferendis consectetur totam quas facilis deserunt saepe eum tempore pariatur velit esse veritatis rerum odio modi, unde quis doloremque tenetur. Dolor, tempora. Itaque optio alias nam nihil voluptatem. Odio consequuntur delectus laborum, quis error quas eos, distinctio odit optio, quae blanditiis dolorem cumque earum accusantium dicta repellendus vel fuga corrupti fugit excepturi tempora. Sit consequuntur beatae pariatur nisi? Nisi doloribus illo voluptate labore esse provident quidem dolorum, ab suscipit eligendi est necessitatibus possimus alias cumque unde iusto?
+                    <span>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora libero blanditiis reprehenderit
+                        quos eveniet quo laudantium veritatis quae magni quia error repellendus a nam, corporis et
+                        consequatur omnis impedit minus distinctio fuga tempore eum. Culpa dolor quod exercitationem facere
+                        facilis! Voluptatem sequi excepturi perferendis consectetur totam quas facilis deserunt saepe eum
+                        tempore pariatur velit esse veritatis rerum odio modi, unde quis doloremque tenetur. Dolor, tempora.
+                        Itaque optio alias nam nihil voluptatem. Odio consequuntur delectus laborum, quis error quas eos,
+                        distinctio odit optio, quae blanditiis dolorem cumque earum accusantium dicta repellendus vel fuga
+                        corrupti fugit excepturi tempora. Sit consequuntur beatae pariatur nisi? Nisi doloribus illo
+                        voluptate labore esse provident quidem dolorum, ab suscipit eligendi est necessitatibus possimus
+                        alias cumque unde iusto?
+                    </span>
                 </div>
-                <a href="#" target="_blank" id="tribute-link">here</a>
+                <div class="link-to-see-more">
+                    <span>click here to see more about <a href="#" target="_blank" id="tribute-link">tributed one</a></span>                    
+                </div>
             </div>
         </main>
     </div>
